[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "Historic-Crypto-Modern"
version = "1.0.1"
description = "An open source Python library for scraping Historical Cryptocurrency data from CoinBase Pro API. (Maintained fork of Historic-Crypto)"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"

maintainers  = [
    {name = "Amir Hariri", email = "a.r.hariri2000@gmail.com"},
]

authors = [
    { name = "David Woroniuk", email = "david.j.woroniuk@durham.ac.uk"}
]

dependencies = [
    "pandas>=2.0",
    "requests>=2.25"
]

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent"
]

[project.urls]
Repository = "https://github.com/A-R-Hariri/Historic_Crypto_Modern"
Upstream = "https://github.com/David-Woroniuk/Historic_Crypto"

[tool.setuptools.packages.find]
where = ["src"]